// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRecommendations should not render when cpsRecommendations toggle is disabled 1`] = `<div />`;

exports[`CpsRecommendations should not render when the hasStoryRecommendations flag is disabled for the service 1`] = `<div />`;

exports[`CpsRecommendations should not render when there is no recommendations data 1`] = `<div />`;

exports[`CpsRecommendations should render when cpsRecommendations toggle and hasStoryRecommendations flag are both true for a single item 1`] = `
<div>
  <div
    class="RecommendationsWrapper-sc-1p91yk0-1 isuewT"
  >
    <section
      aria-labelledby="recommendations-heading"
      class="Wrapper-opyob2-0 dlivvF"
      data-e2e="related-content"
      role="region"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 dfvtmF"
      >
        <strong
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 lmzCD"
                dir="ltr"
                id="recommendations-heading"
              >
                Recommendations
              </span>
            </span>
          </span>
        </strong>
      </div>
      <div
        class="SingleContentWrapper-opyob2-3 dFLSlx"
      >
        <div
          class="GridComponent-nf79gm-0 elxESl"
          dir="ltr"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 lgUEsJ"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <img
                  alt="Angie Dodge"
                  class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/BD47/production/_111155484_mediaitem111155481.jpg"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <span
                class="Headline-sc-1dvfmi3-3 dnWhDh"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/mundo/noticias-53377054"
                >
                  La conmovedora historia de cómo una madre y el hombre preso por la muerte de su hija se unieron para atrapar al verdadero asesino
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`CpsRecommendations should render when cpsRecommendations toggle and hasStoryRecommendations flag are both true for multiple items 1`] = `
<div>
  <div
    class="RecommendationsWrapper-sc-1p91yk0-1 isuewT"
  >
    <section
      aria-labelledby="recommendations-heading"
      class="Wrapper-opyob2-0 dlivvF"
      data-e2e="related-content"
      role="region"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 dfvtmF"
      >
        <strong
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 lmzCD"
                dir="ltr"
                id="recommendations-heading"
              >
                Recommendations
              </span>
            </span>
          </span>
        </strong>
      </div>
      <ul
        class="StoryPromoUl-sc-171lqjd-2 brjIMO GridComponent-nf79gm-0 buIDdq"
        dir="ltr"
        role="list"
      >
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 kPpUUd GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 lgUEsJ"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Angie Dodge"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="https://ichef.bbci.co.uk/news/660/cpsprodpb/BD47/production/_111155484_mediaitem111155481.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-53377054"
                  >
                    La conmovedora historia de cómo una madre y el hombre preso por la muerte de su hija se unieron para atrapar al verdadero asesino
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 kPpUUd GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 lgUEsJ"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Edy Fonseca"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="https://ichef.bbci.co.uk/news/660/cpsprodpb/11DDC/production/_112608137_dsc04722.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-america-latina-52884902"
                  >
                    Coronavirus en Colombia | El caso de la vigilante Edy Fonseca: "Me retuvieron en un edificio de clase alta durante la pandemia, lo acepté y me siento culpable"
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 kPpUUd GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 lgUEsJ"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Martha Mukamushinzimana dice que sólo estaba siguiendo órdenes."
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="https://ichef.bbci.co.uk/news/660/cpsprodpb/0B66/production/_112981920_53113381.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-internacional-53113381"
                  >
                    Soy una mujer genocida y aún me persiguen los recuerdos de lo que hice
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 kPpUUd GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 lgUEsJ"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Julia Garner en The Assitant"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="https://ichef.bbci.co.uk/news/660/cpsprodpb/98E7/production/_113334193_10f06dbb-371a-4aa0-9577-7152063e5f97.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/vert-cul-53370542"
                  >
                    Estrenos 2020: las 10 mejores películas de lo que va del año según la BBC (y que seguramente no pudiste ver en el cine)
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </section>
  </div>
</div>
`;
